--- a/config/default.yml
+++ b/config/default.yml
@@ -10,15 +10,16 @@ dataset_args:
   downsampling: True
   downsample_by: 0.8
   bounds: [0, 1]
-  sequence_length: 10
+  sequence_length: 50
 dataloader_args:
   num_workers: 16
-  batch_size: 2048
+  batch_size: 1024
   shuffle: True
 model_args:
-  lr: 0.0001
+  lr: 0.003
   lr_decay: 0.9
-  dropout: 0.9
-  lstm_layers: 2
+  weight_decay: 0.1
+  dropout: 0.5
+  lstm_layers: 1
 train_epochs: 4
 evaluation: None 
